@@ -1,7 +1,6 @@
 package com.uniovi.rag.services.tools;
 
 import com.uniovi.rag.services.retriever.ContextRetriever;
-import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.document.Document;
@@ -12,6 +11,16 @@ import java.util.stream.Collectors;
 
 import static com.uniovi.rag.utils.InfoExtractor.extractDate;
 
+/**
+ * Enhanced CountDocumentsTool for counting meeting minutes based on specific criteria.
+ * 
+ * Features:
+ * - Intelligent NER-based filtering using EnhancedNERHandler
+ * - Semantic analysis instead of literal matching
+ * - Support for all NER fields including temporalContext and answerType
+ * - Multilingual support with adaptive prompts
+ * - Decoupled from literal word matching
+ */
 public class CountDocumentsTool extends AbstractTool {
 
     public CountDocumentsTool(ChatClient chatClient, ContextRetriever retriever) {
@@ -22,63 +31,54 @@ public class CountDocumentsTool extends AbstractTool {
     public ToolResult execute(ToolExecutionContext ctx) {
         String query = ctx.query();
         JSONObject ner = ctx.nerEntities();
-
-        List<Document> docs = retrieveDocuments(query); // Recupera solo los relevantes
-        List<String> fechas = new ArrayList<>();
+        List<Document> docs = retrieveDocuments(query);
+        List<String> dates = new ArrayList<>();
         long count;
 
         if (ner != null) {
-            count = docs.stream()
-                    .filter(doc -> matchesNER(doc, ner))
-                    .peek(doc -> fechas.add(extractDate(doc.getContent())))
+            // Use enhanced NER filtering with semantic analysis
+            List<Document> filteredDocs = nerHandler.filterDocumentsByTemporalContext(docs, ner);
+            
+            count = filteredDocs.stream()
+                    .filter(doc -> nerHandler.matchesDocumentWithNER(doc, ner))
+                    .peek(doc -> dates.add(extractDate(doc.getContent())))
                     .count();
         } else {
+            // Baseline: filter by query relevance
             count = docs.stream()
                     .filter(doc -> isRelevantToQuery(doc, query))
-                    .peek(doc -> fechas.add(extractDate(doc.getContent())))
+                    .peek(doc -> dates.add(extractDate(doc.getContent())))
                     .count();
         }
 
-        String respuesta = generarRespuestaConLLM(query, count, fechas);
-        return ToolResult.from(respuesta, getClass());
+        String response = generateResponseWithLLM(query, count, dates);
+        return ToolResult.from(response, getClass());
     }
 
-    private boolean matchesNER(Document doc, JSONObject ner) {
-        // Extrae los campos de NER alineados con Minute
-        String[] fields = {"date", "place", "startTime", "endTime", "president", "secretary", "attendees", "numberOfAttendees", "agenda", "decisions", "mentionedEntities", "topics", "section", "summary"};
-        String content = doc.getContent().toLowerCase();
-        for (String field : fields) {
-            if (ner.has(field)) {
-                JSONArray arr = ner.optJSONArray(field);
-                if (arr != null && arr.length() > 0) {
-                    boolean anyMatch = false;
-                    for (int i = 0; i < arr.length(); i++) {
-                        String value = arr.getString(i).toLowerCase();
-                        if (!value.isBlank() && content.contains(value)) {
-                            anyMatch = true;
-                            break;
-                        }
-                    }
-                    if (!anyMatch) return false; // Si hay valores y ninguno coincide, descarta
-                }
-            }
-        }
-        return true;
-    }
-
+    /**
+     * Checks if document is relevant to query using intelligent analysis
+     */
     private boolean isRelevantToQuery(Document doc, String query) {
-        // Usa el LLM para decidir si el documento es relevante para la pregunta
-        String prompt = """
-            Esta es la pregunta del usuario:
+        String answerType = nerHandler.determineAnswerType(query, null);
+        
+        String prompt = String.format("""
+            Given the following user query (in any language):
             "%s"
-            Este es el contenido de un acta:
+            
+            Query type: %s
+            
+            This is the content of a meeting minute:
             "%s"
-            ¿El acta responde de forma clara o parcial a la pregunta? Responde solo con 'sí' o 'no'.
-            """.formatted(
-                query, 
-                doc.getContent()
-                    .substring(0, Math.min(1000, doc.getContent().length()))
-            );
+            
+            Does this meeting minute clearly or partially answer the query?
+            Consider semantic meaning, not just exact matches.
+            
+            Answer only with 'yes' or 'no'.
+            """, 
+            query, 
+            answerType,
+            doc.getContent().substring(0, Math.min(1000, doc.getContent().length())));
+        
         String result = chatClient
                 .prompt()
                 .user(prompt)
@@ -86,17 +86,30 @@ public class CountDocumentsTool extends AbstractTool {
                 .content()
                 .strip()
                 .toLowerCase();
-        return result.contains("sí");
+        
+        return result.contains("yes") || result.contains("sí");
     }
 
-    private String generarRespuestaConLLM(String query, long count, List<String> fechas) {
-        String fechasStr = fechas.stream().filter(f -> f != null && !f.isBlank()).distinct().collect(Collectors.joining(", "));
-        String prompt = """
-            El usuario ha preguntado: "%s"
-            Se han encontrado %d documentos relevantes.
-            Las fechas de los documentos relevantes son: %s
-            Redacta una respuesta breve y clara en español, usando el número y las fechas.
-            """.formatted(query, count, fechasStr.isBlank() ? "[sin fechas]" : fechasStr);
+    /**
+     * Generates response using LLM
+     */
+    private String generateResponseWithLLM(String query, long count, List<String> dates) {
+        String datesStr = dates.stream()
+                .filter(date -> date != null && !date.isBlank())
+                .distinct()
+                .collect(Collectors.joining(", "));
+        
+        String prompt = String.format("""
+            Given the following user query (in any language):
+            "%s"
+            
+            %d relevant documents were found.
+            The dates of the relevant documents are: %s
+            
+            Write a clear, concise response in the same language as the query, 
+            using the number and dates.
+            """, query, count, datesStr.isBlank() ? "[no dates]" : datesStr);
+        
         return chatClient
                 .prompt()
                 .user(prompt)
